# Changelog

## Version  3.3.0

* Adding ETA and size estimates on status panel
* Adding custom x265-params options
* Changing height to say "Auto" when keeping aspect ratio
* Changing that buttons will be disabled without video or when encoding
* Fixing cover extraction could timeout and crash program
* Fixing #89 x265 params for hdr10 changed names (thanks to SlashX)
* Fixing #92 cannot start FastFlix on Mac (thanks to Paul Bakaus)
* Fixing autocrop sometimes failing due to muxing size limitations
* Fixing thumbnail generation did not work for videos with multiple video tracks

## Version  3.2.1

* Fixing #87 psutil not listed as requirement for pip (thanks to I-Iawk)

## Version  3.2.0

* Adding #75 burn-in subtitle support (thanks to Trevbams)
* Adding #81 auto crop feature (thanks to HannesJo0139)
* Adding #84 pause / resume functionality (thanks to loungebob)
* Adding hover info for Audio and Subtitle tracks
* Adding confirm overwrite dialog if file already exists and is not empty
* Adding linking to issues in changelog file
* Changing to explicitly set no-slow-firstpass for x265 bitrate runs
* Changing FFmpeg to download latest available
* Fixing AVC always copied chapters
* Fixing how aspect ratio interacted with crop
* Fixing HEVC would copy HDR10 details on 8-bit videos

## Version  3.1.0

* Adding support for movie title
* Adding settings for disable update check on startup and limited audio conversions
* Adding #57 after conversion options (thanks to TGMais)
* Adding Windows should not to go to sleep during conversion
* Changing #80 thumbnail preview will start at 10% in if no start time given (thanks to zsumie)
* Changing no longer need to restart for setting page changes
* Changing width and height will only give warnings if not divisible by two
* Fixing output name is not regenerated on encoder switch if matching extension
* Fixing #79 crash on no internet connection (thanks to L0Lock)
* Fixing output paths not working on network drives
